# rct-plataforma

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONFIDENCIAL.md  INICIAR.ps1  LICENSE  PROTOCOLOS.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  start.bat  tsconfig.json  vercel.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
content/posts-do-dia/: 10-mandamentos-reescrito.md  jesus-12-anos-reescrito.md  sao-santo-titulos-apostolos.md  tentacao-autocontrole-hebreus.md
docs/: BLOG_CONSOLIDACAO.md  CREDENCIAIS_AMBIENTE.md  ESSENCIA.md  FORK-ESTRATEGIA.md  PROTOCOLO_NEUROTEOLOGIA.md  VERSIONING.md
docs/deploy/: vercel.md
docs/editorial/: STATUS-BIBLIOTECA-NEUMA.md  auditoria-profundidade-1782151091688.json  auditoria-profundidade-1782151091688.md
docs/governance/: codigo-de-etica.md
docs/institutional-memory/: guia-estilo-editorial.md  missao-e-valores.md  taxonomia-conteudo.md
docs/scripts/: rct-analise-plataforma.js
prisma/: schema.prisma
scripts/: auditoria-profundidade-neuma.mjs  biblioteca-neuma.mjs  enriquecer-artigo-neuma.mjs  migrar-titulos-neuma.mjs  seed-artigo01.mjs
scripts/content/: artigo01-raw.txt
scripts/lib/: auditoria-neuma-lib.mjs  (+1 more)
services/agents/: .env.example  Dockerfile  README.md  pyproject.toml
services/agents/api/: index.py
services/agents/src/agents/: __init__.py  cli.py  config.py  graph.py  llm.py  memory.py  nodes.py  prompts.py  schemas.py
src/: middleware.ts
src/app/: globals.css  (+7 more)
(+167 files in other folders)
