[project]
name = "evangelho-agents"
version = "0.1.0"
description = "Orquestrador multiagente Groq + LangGraph para Evangelho Digital"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-groq>=0.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.9.0"]

[project.scripts]
evangelho-pipeline = "agents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.ruff]
line-length = 100
target-version = "py311"
